@startuml

title __BUILDER's Class Diagram__\n

  namespace builder {
    class builder.Person {
        + city : String
        + company : String
        + name : String
        + pincode : String
        + position : String
        + salary : int
        + toString()
    }
  }
  

  namespace builder {
    class builder.PersonAddressBuilder {
        + PersonAddressBuilder()
        + atPincode()
        + inCity()
        + name()
    }
  }
  

  namespace builder {
    class builder.PersonBuilder {
        + build()
        + lives()
        + works()
    }
  }
  

  namespace builder {
    class builder.PersonDemo {
        {static} + main()
    }
  }
  

  namespace builder {
    class builder.PersonOccupancyBuilder {
        + PersonOccupancyBuilder()
        + paid()
        + worksAs()
        + worksAt()
    }
  }
  

  builder.Person -up-|> builder.PersonDemo
  builder.PersonAddressBuilder -up-|> builder.PersonBuilder
  builder.PersonBuilder o-- builder.Person : person
  builder.PersonOccupancyBuilder -up-|> builder.PersonBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
